{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 3133,
  "lineage": "bd7164cb-34de-8ace-63b0-40ec5961c60b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "MyWPInstancesTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:319332326148:targetgroup/tf-example-lb-tg/1051986e70ee6f0f",
            "arn_suffix": "targetgroup/tf-example-lb-tg/1051986e70ee6f0f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:319332326148:targetgroup/tf-example-lb-tg/1051986e70ee6f0f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.efs_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:security-group/sg-0950d9d99fbf58679",
            "description": "Security group for user-service with custom ports open within VPC, and PostgreSQL publicly open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0950d9d99fbf58679",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09fb32e113ac83b1e"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "user-service-sg-efs-20220104172831037000000002",
            "name_prefix": "user-service-sg-efs-",
            "owner_id": "319332326148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user-service-sg-efs"
            },
            "tags_all": {
              "Name": "user-service-sg-efs"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 2049,
            "id": "sgrule-2218929417",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0950d9d99fbf58679",
            "self": false,
            "source_security_group_id": "sg-09fb32e113ac83b1e",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs_sg.aws_security_group.this",
            "module.efs_sg.aws_security_group.this_name_prefix",
            "module.instance_sg.aws_security_group.this",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.efs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-1601793321",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0950d9d99fbf58679",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs_sg.aws_security_group.this",
            "module.efs_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb_http.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:319332326148:loadbalancer/elb-example",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-example-1376607984.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 60,
                "target": "HTTP:80/",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "elb-example",
            "idle_timeout": 60,
            "instances": [
              "i-02be3b3d512519dad"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-example",
            "security_groups": [
              "sg-09fb32e113ac83b1e"
            ],
            "source_security_group": "319332326148/user-service-sg-20220104172830892400000001",
            "source_security_group_id": "sg-09fb32e113ac83b1e",
            "subnets": [
              "subnet-0178770d249c73560",
              "subnet-02a0ccf76daa3b4d7"
            ],
            "tags": {
              "Name": "elb-example"
            },
            "tags_all": {
              "Name": "elb-example"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.instance_sg.aws_security_group.this",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:security-group/sg-09fb32e113ac83b1e",
            "description": "Security group for user-service with custom ports open within VPC, and PostgreSQL publicly open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fb32e113ac83b1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "user-service-sg-20220104172830892400000001",
            "name_prefix": "user-service-sg-",
            "owner_id": "319332326148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user-service-sg"
            },
            "tags_all": {
              "Name": "user-service-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-3505773810",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09fb32e113ac83b1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.instance_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-3863267790",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09fb32e113ac83b1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_sg.aws_security_group.this",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-1355715707",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09fb32e113ac83b1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_sg.aws_security_group.this",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 8080,
            "id": "sgrule-11375906",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09fb32e113ac83b1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_sg.aws_security_group.this",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054f0fb90247d992e",
            "association_id": "eipassoc-0834b2a09cd1dd24a",
            "domain": "vpc",
            "id": "eipalloc-054f0fb90247d992e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-093845792a0b738ca",
            "private_dns": "ip-10-0-101-147.us-east-2.compute.internal",
            "private_ip": "10.0.101.147",
            "public_dns": "ec2-3-133-41-151.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.41.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079a0da4c038b38e0",
            "association_id": "eipassoc-0909f7e92aa1dc8d8",
            "domain": "vpc",
            "id": "eipalloc-079a0da4c038b38e0",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06a75a6da783bd999",
            "private_dns": "ip-10-0-102-89.us-east-2.compute.internal",
            "private_ip": "10.0.102.89",
            "public_dns": "ec2-18-224-92-59.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.92.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04013d8841a628c10",
            "association_id": "eipassoc-0f30e8e59d307229f",
            "domain": "vpc",
            "id": "eipalloc-04013d8841a628c10",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0bf5eabb03c9e5fd3",
            "private_dns": "ip-10-0-103-59.us-east-2.compute.internal",
            "private_ip": "10.0.103.59",
            "public_dns": "ec2-3-13-115-93.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.115.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:internet-gateway/igw-0d90fc7733ebbfd0d",
            "id": "igw-0d90fc7733ebbfd0d",
            "owner_id": "319332326148",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054f0fb90247d992e",
            "connectivity_type": "public",
            "id": "nat-0c5fe38c0e2044a10",
            "network_interface_id": "eni-093845792a0b738ca",
            "private_ip": "10.0.101.147",
            "public_ip": "3.133.41.151",
            "subnet_id": "subnet-0178770d249c73560",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079a0da4c038b38e0",
            "connectivity_type": "public",
            "id": "nat-089531978bb0fdcbc",
            "network_interface_id": "eni-06a75a6da783bd999",
            "private_ip": "10.0.102.89",
            "public_ip": "18.224.92.59",
            "subnet_id": "subnet-02a0ccf76daa3b4d7",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04013d8841a628c10",
            "connectivity_type": "public",
            "id": "nat-015be9fd3321f3992",
            "network_interface_id": "eni-0bf5eabb03c9e5fd3",
            "private_ip": "10.0.103.59",
            "public_ip": "3.13.115.93",
            "subnet_id": "subnet-0c2b6a822b28c1323",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-us-east-2c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-027fe2ef61871d39f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c5fe38c0e2044a10",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027fe2ef61871d39f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d8260d9cb64387b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-089531978bb0fdcbc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d8260d9cb64387b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-073b63bb28d4ce75b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-015be9fd3321f3992",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073b63bb28d4ce75b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d90fc7733ebbfd0d",
            "id": "r-rtb-018e27cb0f71c0f591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018e27cb0f71c0f59",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:route-table/rtb-027fe2ef61871d39f",
            "id": "rtb-027fe2ef61871d39f",
            "owner_id": "319332326148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c5fe38c0e2044a10",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:route-table/rtb-08d8260d9cb64387b",
            "id": "rtb-08d8260d9cb64387b",
            "owner_id": "319332326148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-089531978bb0fdcbc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:route-table/rtb-073b63bb28d4ce75b",
            "id": "rtb-073b63bb28d4ce75b",
            "owner_id": "319332326148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015be9fd3321f3992",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:route-table/rtb-018e27cb0f71c0f59",
            "id": "rtb-018e27cb0f71c0f59",
            "owner_id": "319332326148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d90fc7733ebbfd0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0603274a0859307b5",
            "route_table_id": "rtb-027fe2ef61871d39f",
            "subnet_id": "subnet-08eaedd7be9779545"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0033e673fea65c3c7",
            "route_table_id": "rtb-08d8260d9cb64387b",
            "subnet_id": "subnet-0138ef24eb28d7a80"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b4d6ba0084a91e3",
            "route_table_id": "rtb-073b63bb28d4ce75b",
            "subnet_id": "subnet-0fec60fc330452d88"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae6165006a9a208e",
            "route_table_id": "rtb-018e27cb0f71c0f59",
            "subnet_id": "subnet-0178770d249c73560"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085fdf0bdd1d176bc",
            "route_table_id": "rtb-018e27cb0f71c0f59",
            "subnet_id": "subnet-02a0ccf76daa3b4d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0290d548b7486b45d",
            "route_table_id": "rtb-018e27cb0f71c0f59",
            "subnet_id": "subnet-0c2b6a822b28c1323"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:subnet/subnet-08eaedd7be9779545",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08eaedd7be9779545",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319332326148",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:subnet/subnet-0138ef24eb28d7a80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0138ef24eb28d7a80",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319332326148",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:subnet/subnet-0fec60fc330452d88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0fec60fc330452d88",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319332326148",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-private-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:subnet/subnet-0178770d249c73560",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0178770d249c73560",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319332326148",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:subnet/subnet-02a0ccf76daa3b4d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-02a0ccf76daa3b4d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319332326148",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:subnet/subnet-0c2b6a822b28c1323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0c2b6a822b28c1323",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319332326148",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-public-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress-public-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0904876a1fa98bd0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319332326148:vpc/vpc-0904876a1fa98bd0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e338baf9612e8adc",
            "default_route_table_id": "rtb-09266a73abc093228",
            "default_security_group_id": "sg-0be391a6ee8abb425",
            "dhcp_options_id": "dopt-0afd3ed1c3c1fdd55",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0904876a1fa98bd0c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09266a73abc093228",
            "owner_id": "319332326148",
            "tags": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform_test_vpc_wordpress",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}